# ai-text-detector

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  pyproject.toml
.dvc/: config
ai_text_detector/: config.py  data.py  data_module.py  gdrive.py  infer.py  model.py  plots.py  train.py
configs/: config.yaml
configs/data/: data.yaml
configs/export/: onnx.yaml
configs/logging/: mlflow.yaml
configs/preprocessing/: text.yaml
configs/training/: distilbert.yaml  model.yaml
data/: .gitignore  test_set.csv.dvc  train_set.csv.dvc  validation_set.csv.dvc
tests/: test_version.py
