[tool.poetry]
name = "ai-text-detector"
version = "0.1.0"
description = "Detector for AI generated text"
authors = ["Strelkov Andrey <strelkov.as@phystech.edu>"]
maintainers = ["Strelkov Andrey <strelkov.as@phystech.edu>"]
readme = "README.md"
repository = "https://github.com/asesen/ai-text-detector"
documentation = "https://github.com/asesen/ai-text-detector"
keywords = ["data science", "machine learning", "AI", "BERT", "Detector"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.9.1"
pytorch-lightning = "^2.6.0"
transformers = "^4.57.3"
torchmetrics = "^1.8.2"
scikit-learn = "^1.8.0"
dvc = "^3.65.0"
dvc-gdrive = "^3.0.1"
pyopenssl = "22.1.0"
cryptography = "38.0.4"
gdown = "^5.2.0"
fire = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = ['E203', 'E501', 'W503', 'B950']
max-complexity = 12
select = ['B', 'C', 'E', 'F', 'W', 'B9']
per-file-ignores = [
    # for easier imports to __init__ without __all__
    '**/__init__.py: F401',
    # file to define custom types
    'types.py: F401',
]
count = true

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
